Include pagination for posts
